# BreakoutGame

./: .gitignore  CMakeLists.txt  README.md  build-window.bat
Game/: CMakeLists.txt
Game/Source/: Game.cpp
Game/Source/Client/: SandboxApplication.cpp  SandboxApplication.h
Game/Source/Client/Scene/: MainScene.cpp  MainScene.h
Waternion/: CMakeLists.txt
Waternion/Source/: glad.cpp  pch.cpp  pch.h
Waternion/Source/Collisions/: Collision.h  Primitive.h
Waternion/Source/Core/: Application.cpp  Application.h  Entry.h  Native.cpp  Native.h  Template.h
Waternion/Source/Core/Event/: Event.cpp  Event.h  EventCallback.h  EventDispatcher.cpp  EventDispatcher.h
Waternion/Source/Core/Manager/: ResourceManager.cpp  ResourceManager.h
Waternion/Source/ECS/: Coordinator.cpp  Coordinator.h  Core.h  Entity.cpp  Entity.h  System.cpp  System.h  Type.h
Waternion/Source/ECS/Component/: Defaults.cpp  Defaults.h  SpriteComponent.cpp  SpriteComponent.h
Waternion/Source/ECS/Scene/: MZeroScene.cpp  MZeroScene.h  Scene.cpp  Scene.h
Waternion/Source/ECS/System/: AnimationSystem.cpp  AudioSystem.cpp  AudioSystem.h  BatchRenderer.cpp  BatchRenderer.h  InputSystem.cpp  InputSystem.h  ParticleSystem.cpp  ParticleSystem.h  PhysicWorld.cpp  PhysicWorld.h  Renderer.cpp  Renderer.h  ScriptingSystem.cpp  ScriptingSystem.h  TextRenderer.cpp  TextRenderer.h
Waternion/Source/Layer/: Layer.cpp  Layer.h
Waternion/Source/Layer/GUI/: GUI.cpp  GUI.h
Waternion/Source/Math/: Matrix.cpp  Matrix.h  Utils.h  Vec.cpp  Vec.h
Waternion/Source/Render/: Framebuffer.cpp  Framebuffer.h  PostProcessor.cpp  PostProcessor.h  Shader.cpp  Shader.h  SpriteSheet.cpp  SpriteSheet.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Waternion/Source/Render/Batching/: RenderBatch.cpp  RenderBatch.h
Waternion/Source/Scene/: GameScene.cpp  GameScene.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Waternion/Source/Scripts/: Background.cpp  Background.h  Ball.cpp  Ball.h  Brick.cpp  Brick.h  GameLevel.cpp  GameLevel.h  GameManager.cpp  GameManager.h  Leviathan.cpp  Leviathan.h  Native.cpp  Native.h  PlayerController.cpp  PlayerController.h
Waternion/Source/Scripts/Powers/: Power.cpp  Power.h  PowerManager.cpp  PowerManager.h
Waternion/Source/Utils/: ErrorHandler.h  Settings.cpp  Settings.h
Waternion/Source/Window/: Window.cpp  Window.h
imgui/: CMakeLists.txt
(+49 files in other folders)
